# mesa

./: .gitlab-ci.yml  .pick_status.json  meson.build
.gitlab-ci/: farm-rules.yml  prepare-artifacts.sh
.gitlab-ci/common/: init-stage2.sh
.gitlab-ci/container/debian/: gitlab-ci.yml
docs/: envvars.rst  features.txt
docs/ci/: index.rst  kernel.rst
docs/relnotes/: new_features.txt
src/: meson.build
src/amd/vulkan/: meson.build  radv_cmd_buffer.c  radv_formats.c  radv_physical_device.c
src/amd/vulkan/meta/: radv_meta.h  radv_meta_copy.c  radv_meta_copy_indirect_cs.c  radv_meta_copy_indirect_fs.c  radv_meta_etc_decode.c
src/amd/vulkan/nir/: radv_meta_nir.c  radv_meta_nir.h
src/asahi/vulkan/: hk_cmd_meta.c
src/broadcom/ci/: gitlab-ci-inc.yml  gitlab-ci.yml
src/compiler/: shader_enums.h  shader_info.h
src/compiler/clc/: clc.h  clc_helpers.cpp
src/compiler/nir/: meson.build  nir.c  nir.h  nir_clone.c  nir_divergence_analysis.c  nir_gather_info.c  nir_instr_set.c  nir_intrinsics.py  nir_lower_io.c  nir_lower_non_uniform_access.c  nir_lower_robust_access.c  nir_lower_tex.c  nir_noltis.c  nir_opcodes.py  nir_opt_algebraic.py  nir_opt_fuse_ffma.c  nir_opt_non_uniform_access.c  nir_print.c  nir_serialize.c  nir_shader_compiler_options.h
src/compiler/nir/tests/: nir_noltis_tests.cpp
src/compiler/spirv/: nir_spirv.h  spirv_to_nir.c  vtn_private.h  vtn_variables.c
src/egl/drivers/dri2/: egl_dri2.c  platform_drm.c
src/freedreno/ci/: gitlab-ci-inc.yml  gitlab-ci.yml
src/freedreno/ir3/: ir3.h  ir3_compiler.c  ir3_compiler_nir.c
src/freedreno/vulkan/: tu_clear_blit.cc  tu_cmd_buffer.cc  tu_device.cc  tu_pipeline.cc
src/gallium/auxiliary/draw/: draw_tess.h
src/gallium/auxiliary/gallivm/: lp_bld_arit.c  lp_bld_gather.c  lp_bld_init.c  lp_bld_init_common.c  lp_bld_init_orc.cpp  lp_bld_misc.cpp
src/gallium/auxiliary/nir/: nir_to_tgsi.c
src/gallium/drivers/crocus/: crocus_context.h  crocus_resource.h  crocus_screen.c  crocus_state.c
src/gallium/drivers/i915/: i915_screen.c
src/gallium/drivers/lima/: lima_texture.c
src/gallium/drivers/llvmpipe/: lp_context.c  lp_flush.c  lp_state_cs.c  lp_state_cs.h  lp_texture.c  lp_texture_handle.c
src/gallium/drivers/nouveau/ci/: gitlab-ci.yml
src/gallium/drivers/panfrost/: pan_fb_preload.c  pan_job.c
src/gallium/drivers/r300/: r300_render.c  r300_screen.c
src/gallium/drivers/r300/compiler/: nir_to_rc.c  radeon_variable.c
src/gallium/drivers/zink/: zink_compiler.c
src/gallium/frontends/dri/: dri_helpers.c  dri_helpers.h  loader_dri3_helper.c
src/gallium/frontends/lavapipe/: lvp_descriptor_set.c  lvp_device.c  lvp_execute.c  lvp_pipeline.c  lvp_private.h  lvp_ray_tracing_pipeline.c  meson.build
src/gallium/frontends/rusticl/: rusticl_nir.c  rusticl_nir.h
src/gallium/targets/lavapipe/: meson.build
src/gbm/backends/dri/: gbm_dri.c
src/intel/vulkan/: anv_astc_emu.c  anv_physical_device.c
src/intel/vulkan/grl/: parsetab.py
src/loader/: loader.c  loader_dri_helper.c  loader_dri_helper.h
src/nouveau/compiler/nak/: api.rs  ir.rs  lib.rs  opt_zero.rs
src/nouveau/vulkan/: nvk_cmd_meta.c  nvk_physical_device.c
src/panfrost/: meson.build
src/panfrost/compiler/: bifrost_compile.c
src/panfrost/lib/: meson.build  pan_desc.c  pan_desc.h
src/panfrost/vulkan/: panvk_cmd_draw.h  panvk_physical_device.c  panvk_shader.h  panvk_vX_cmd_draw.c  panvk_vX_cmd_meta.c  panvk_vX_shader.c
src/panfrost/vulkan/csf/: panvk_vX_cmd_draw.c
src/util/: detect_os.h  disk_cache_os.c  mesa_cache_db.c  os_misc.c  os_misc.h  u_debug.h
src/vulkan/runtime/: meson.build  vk_acceleration_structure.c  vk_buffer.h  vk_cmd_enqueue.c  vk_device.c  vk_meta.h  vk_meta_blit_resolve.c  vk_nir.c  vk_nir_convert_ycbcr.c  vk_nir_fixup_ubo_derefs.c  vk_nir_lower_descriptor_heaps.c  vk_nir_lower_descriptor_heaps.h  vk_physical_device.c  vk_pipeline.c  vk_sampler.c  vk_sampler.h  vk_shader.c  vk_shader.h  vk_texcompress_astc.c  vk_texcompress_etc2.c
src/vulkan/util/: vk_cmd_queue_gen.py  vk_dispatch_table_gen.py  vk_internal_exts.h
src/vulkan/wsi/: wsi_common_drm.c  wsi_common_headless.c
(+17 files in other folders)
